<resources>
    <string name="app_name">Appilogue</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">profile</string>
    <string name="menu_community">community</string>
    <string name="to_home">홈으로</string>
    <!--    Onboarding   -->
    <string name="next">다음</string>
    <string name="onboarding_planet_description">닉네임(이)가 살고있는 행성이에요. 우주에 떠도는 APP을 살피면서 행성을 꾸며보세요.</string>
    <string name="onboarding_black_hole_description">여긴 블랙홀이에요. 우주에 정처없이 떠돌아다니는 App을 이제 기념하면서 블랙홀로 보내주세요.</string>
    <string name="onboarding_white_hole_description">여긴 화이트홀이에요. 블랙홀에 갇힌 App을 다시 꺼내 보고싶다면 화이트홀로 보내서 축하해줘요.</string>
    <string name="onboarding_space_dust_description">우주먼지에요. 이 광활한 우주를 호기심 가득 안고 열심히 둥- 둥- 탐험하고 계시군요!</string>
    <string name="onboarding_space_description">닉네임(이)가 활동하고 있는 내 스페이스에요. 우주 속 수많은 APP을 찾으러 탐험을 시작해볼까요?</string>
    <string name="onboarding_nickname">우주먼지</string>
    <string name="onboarding_my_space">내 스페이스</string>
    <!--    Home   -->
    <string name="my_space">나의 우주 공간</string>
    <string name="planet">행성</string>
    <string name="white_hole">화이트홀</string>
    <string name="black_hole">블랙홀</string>
    <string name="space_dust">우주먼지</string>
    <string name="my_planet">나의 행성</string>
    <string name="my_space_dust">나의 우주먼지</string>
    <string name="my_black_hole">나의 블랙홀</string>
    <string name="my_white_hole">나의 화이트홀</string>
    <string name="planet_store">행성 스토어</string>
    <string name="dust_store">먼지 스토어</string>
    <!--    History    -->
    <string name="notification">알림</string>
    <string name="history_like">%1$s님이 회원님의 게시물을 좋아합니다. %2$s</string>
    <string name="history_comment_to_comment">%1$s님이 회원님에게 답글을 달았습니다: %3$s %2$s</string>
    <string name="history_comment_to_review">%1$s님이 회원님 게시물에 답글을 달았습니다: %3$s %2$s</string>
    <string name="history_second_passed">%1$d초 전</string>
    <string name="history_minute_passed">%1$d분 전</string>
    <string name="history_hour_passed">%1$d시간 전</string>
    <string name="history_day_passed">%1$d일 전</string>
    <string name="history_week_passed">%1$d주 전</string>
    <string name="history_month_passed">%1$d달 전</string>
    <string name="history_year_format">yyyy. MM. dd</string>
    <string name="today">오늘</string>
    <string name="this_week">이번 주</string>
    <string name="this_month">이번 달</string>
    <string name="did_before">지난 활동</string>
    <!--    Review   -->
    <string name="toolbar_title_search_app">App 검색</string>
    <string name="description_back_button">back button</string>
    <string name="description_close_button">close button</string>
    <string name="search_title_text">리뷰하고 싶은 앱을 검색해 보세요</string>
    <string name="hint_search_app_edit_text">앱 이름을 입력해주세요.</string>
    <string name="description_installed_app_icon">app icon</string>
    <string name="planet_toolbar">planet toolbar</string>
    <string name="description_black_hole">블랙홀은 더 이상 사용하지 않는, 또는\n떠나보내주고 싶은 앱이 모여있는 곳이에요.</string>
    <string name="description_white_hole">화이트홀은 블랙홀에 있던 앱을 꺼내오거나,\n좋은 경험으로 기념하고 싶은 앱이 모여있는 곳이에요.</string>
    <string name="lounge_fragment">LoungeFragment</string>
    <string name="profile_fragment">ProfileFragment</string>
    <string name="home_fragment">HomeFragment</string>
    <string name="white_hole_text">화이트홀</string>
    <string name="black_hole_text">블랙홀</string>
    <string name="app_review_sub_title">을(를) 어디로</string>
    <string name="app_review_sub_title_question">리뷰하시겠어요?</string>
    <string name="black_hole_image_description">블랙홀 이미지</string>
    <string name="white_hole_image_description">블랙홀 이미지</string>
    <string name="abb_bar_black_hole_review_title">블랙홀 리뷰</string>
    <string name="abb_bar_white_hole_review_title">화이트홀 리뷰</string>
    <string name="app_icon_content_description">Selected App Icon</string>
    <string name="review_input_title_text">리뷰를 작성해주세요 :)</string>
    <string name="black_hole_review_hint">이제 그만 너를 놓아줄게…</string>
    <string name="review_keyword_title_text">이 앱의 키워드를 뽑아주세요!</string>
    <string name="review_send_button_text">리뷰 보내기</string>
    <string name="review_selector_button_text">선택</string>
    <string name="review_text_count">%d/500자</string>
    <string name="hashtag_text_format">#%s</string>
    <string name="remove_result_message">삭제 되었습니다.</string>
    <string name="report_result_message">신고 되었습니다.</string>
    <string name="review_register_complete_title">%s로 보내기 완료!</string>
    <string name="review_register_complete_sub_title">작성한 앱이 %s로 슉- 날아갔어요!</string>
    <!--   Login  -->
    <string name="insert_email">이메일을 입력해주세요</string>
    <string name="next_button">다음</string>
    <string name="email_to_certification">입력한 이메일로 인증번호가 전송됩니다</string>
    <string name="certification_resend_message">재전송</string>
    <string name="certification_number_message">인증번호를 입력하세요</string>
    <string name="certification_can_edit_number">0123456789</string>
    <string name="certification_notify_message">전송된 인증번호는 10분 안에 만료됩니다.</string>
    <string name="email_example">예시) Applilogue@gmail.com</string>
    <string name="password_text">비밀번호를 설정해주세요.</string>
    <string name="password_length_over_8">비밀번호 8자 이상</string>
    <string name="password_re_enter">비밀번호 다시 입력</string>
    <string name="nickname_example">닉네임</string>
    <string name="nickname_notify_insert_nickname">사용하실 닉네임을 정해주세요.</string>
    <string name="done">완료</string>
    <string name="email_format_error_text">올바른 이메일 형식을 입력해주세요.</string>
    <string name="nickname_can_change">가입 후 언제든지 변경할 수 있습니다.</string>
    <string name="password_length">비밀번호가 8자 미만입니다.</string>
    <string name="password_check">비밀번호가 다릅니다.</string>
    <string name="nickname_be_used">사용 중인 별명입니다.</string>
    <string name="email">Email</string>
    <string name="wrong_password">비밀번호가 일치하지 않습니다.</string>
    <string name="login_with_email">이메일로 로그인</string>
    <string name="login_with_apple">Apple로 로그인</string>
    <string name="login_with_kakao">카카오톡으로 로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="email_login_text">이메일로 로그인</string>
    <string name="email_login_email_text">이메일</string>
    <string name="email_login_password_text">비밀번호 입력</string>
    <string name="email_login_forget_id">비밀번호를 잊어버렸어요.</string>
    <string name="email_signed_up_text">"가입한 이메일 주소를 입력해주세요"</string>
    <string name="password_reset">"비밀번호 재설정"</string>
    <string name="please_enter_nickname">"닉네임을 입력해주세요."</string>
    <string name="wrong_certification">"인증번호가 다릅니다!"</string>
    <string name="resend_certification_notify">"재전송 된 번호를 입력해주세요"</string>
    <string name="alreay_signup">"이미 가입된 이메일입니다."</string>
    <string name="not_signup">"가입되지 않은 이메일입니다."</string>
    <string name="same_password">"이전 비밀번호와 동일합니다."</string>
    <string name="save">저장</string>
    <string name="save_this">이대로 저장하시겠어요?</string>
    <string name="let_my_space_dust">나만의 먼지가 될꺼에요!</string>
    <string name="check">확인</string>
    <string name="save_success">저장 완료!</string>
    <!--   MyPage  -->
    <string name="my_page">마이페이지</string>
    <string name="version">버전</string>
    <string name="maker">만든이</string>
    <string name="question">문의하기</string>
    <string name="setting_account">계정관리</string>
    <string name="set_notification">알림설정</string>
    <string name="anonymous">Anonymous</string>
    <string name="anonymous_maker_email">myappilogue@gmail.com</string>
    <string name="profile_not_found_version">버전 정보를 찾을 수 없습니다</string>
    <string name="revise">수정</string>
    <string name="my_account">내 계정</string>
    <string name="reset_password">비밀번호 재설정</string>
    <string name="logout">로그아웃</string>
    <string name="resign_service">서비스 탈퇴</string>
    <string name="complete">완료</string>
    <string name="cancel">취소</string>
    <!-- Lounge -->
    <string name="more_button_description">More button</string>
    <string name="dummy_content">본문은 여기에 나타나고 최대 다섯줄 노출시키도록 하겠습니다. 만약 다섯줄 이상의 텍스트양이면 …으로 줄여지면서 더보기 기능이 추가되게 진행하겠습니다. 예를 들면 지금 이렇게 네줄이 되었고, 다섯줄이 되기까지 안간힘을 쓰며 글을 쓴다면 바로 확인해볼 수 있습니다. 글자수 채우기 너무 어렵다! 지금은 또 풀로 볼 수 있을 때의 화면이다!!</string>
    <string name="hint_comment">댓글을 입력해주세요</string>
    <string name="read_more_text"> … 더보기</string>
    <string name="comment_chip_text_empty">댓글 달기</string>
    <string name="comment_count_text">댓글 %d</string>
    <string name="hashtags_max_count_text">(최대 5개)</string>
    <string name="hint_hashtag"># 어떤 키워드가 생각나세요?</string>
    <string name="menu_text_report">신고하기</string>
    <string name="menu_text_delete">삭제하기</string>
    <string name="menu_text_cancel">취소</string>
    <string name="ok_text">확인</string>
    <!-- App Info -->
    <string name="write_review_text">리뷰쓰기</string>
    <string name="ratio_title_text_format">사람들은 %s을(를) 이렇게 생각하고 있어요!</string>
    <string name="app_info_review_title">%s 리뷰</string>
    <string name="app_review_ratio_format">%d %%</string>
    <!-- profile -->
    <string name="logout_alert_title">로그아웃 하시겠습니까?</string>
    <string name="withdraw_alert_title">회원 탈퇴 하시겠습니까?</string>
    <string name="agreement_title_text">서비스 이용 동의 및 확인</string>
    <string name="all_agreement_text">전체 동의하기</string>
    <string name="terms_title_text">[필수] 서비스 이용약관 동의</string>
    <string name="terms_title">서비스 이용약관 동의</string>
    <string name="personal_info_title">개인 정보 수집 및 이용 동의</string>
    <string name="personal_info_title_text">[필수] 개인 정보 수집 및 이용 동의</string>
    <string name="agreement_read_more_text">더보기</string>
    <string name="reported_post_text">삭제 되거나 신고된 글 입니다.</string>
</resources>
